<resources>
    <string name="app_name">stars-app</string>
    <string name="title_home">首页</string>
    <string name="title_search">搜索</string>
    <string name="title_mine">我的</string>
    <string name="title_follows">关注</string>
    <string name="title_login">登录</string>
    <string name="title_register">注册</string>
    <string name="title_label_cloud">标签云</string>
    <string name="title_settings">设置</string>
    <string name="title_settings_user">用户信息</string>
    <string name="title_settings_notify">通知设置</string>
    <string name="title_settings_play">播放设置</string>
    <string name="title_feedback">反馈</string>
    <string name="title_settings_about">关于</string>
    <!-- Strings related to login -->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_verify_code">验证码</string>
    <string name="prompt_nickname">宝宝昵称</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">账号错误</string>
    <string name="invalid_password">密码长度小于5个字符</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_birth">出生日期</string>
    <string name="btn_follow">关注</string>
    <string name="btn_follow_cancel">取消关注</string>
    <string name="title_author">作者</string>

    <string-array name="role">
        <item>父亲</item>
        <item>母亲</item>
        <item>爷爷</item>
        <item>奶奶</item>
        <item>外公</item>
        <item>外婆</item>
    </string-array>

    <string-array name="gender">
        <item>男孩</item>
        <item>女孩</item>
    </string-array>
</resources>