<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="cc.doctor.stars_app.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="cc.doctor.stars_app.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_search_result"
        android:name="cc.doctor.stars_app.ui.search.result.SearchResultFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search_result" />

    <fragment
        android:id="@+id/navigation_label_cloud"
        android:name="cc.doctor.stars_app.ui.labelcloud.LabelCloudFragment"
        android:label="@string/title_label_cloud"
        tools:layout="@layout/fragment_label_cloud" />

    <fragment
        android:id="@+id/navigation_mine"
        android:name="cc.doctor.stars_app.ui.mine.MineFragment"
        android:label="@string/title_mine"
        tools:layout="@layout/fragment_mine" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="cc.doctor.stars_app.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_settings_user"
        android:name="cc.doctor.stars_app.ui.settings.SettingsUserFragment"
        android:label="@string/title_settings_user"
        tools:layout="@layout/fragment_settings_user" />

    <fragment
        android:id="@+id/navigation_settings_play"
        android:name="cc.doctor.stars_app.ui.settings.SettingsPlayFragment"
        android:label="@string/title_settings_play"
        tools:layout="@layout/fragment_settings_play" />

    <fragment
        android:id="@+id/navigation_settings_notify"
        android:name="cc.doctor.stars_app.ui.settings.SettingsNotifyFragment"
        android:label="@string/title_settings_notify"
        tools:layout="@layout/fragment_settings_notify" />

    <fragment
        android:id="@+id/navigation_feedback"
        android:name="cc.doctor.stars_app.ui.settings.FeedbackFragment"
        android:label="@string/title_feedback"
        tools:layout="@layout/fragment_feedback" />

    <fragment
        android:id="@+id/navigation_settings_about"
        android:name="cc.doctor.stars_app.ui.settings.SettingsAboutFragment"
        android:label="@string/title_settings_about"
        tools:layout="@layout/fragment_settings_about" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="cc.doctor.stars_app.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/navigation_register"
        android:name="cc.doctor.stars_app.ui.login.RegisterFragment"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/navigation_follow"
        android:name="cc.doctor.stars_app.ui.follow.FollowFragment"
        android:label="@string/title_follows"
        tools:layout="@layout/fragment_mine" />
</navigation>